JDT ls mistical exception fix https://github.com/eclipse-jdt/eclipse.jdt.core/issues/4924
